fix navbar not showing on desktop

--- a/style.css
+++ b/style.css
@@ -79,60 +79,7 @@ body {
   color: #6070ff;
 }
 
-.navbar {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background: #6070ff;
-  backdrop-filter: blur(3rem);
-  opacity: 0.9;
-  overflow-x: hidden;
-  transition: 0.5s;
-}
 
-.navbar a {
-  padding: 8px;
-  text-decoration: none;
-  list-style-type: none;
-  font-size: 36px;
-  color: white;
-  display: block;
-  transition: 0.3s;
-}
-
-.close-btn {
-  position: absolute;
-  top: 0;
-  right: 15px;
-  font-size: 40px;
-  color: white;
-}
-
-.nav-bar-links {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-items: left;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding-left: 18px;
-  width: 100%;
-  margin-top: 120px;
-  list-style-type: none;
-  text-decoration: none;
-}
-
-.humberger-menu {
-  height: 12px;
-  width: 18px;
-  margin-left: 3px;
-  margin-top: 6px;
-  padding-right: 36px;
-  color: #6070ff;
-}
 
 .main-content {
   display: flex;
@@ -568,6 +515,63 @@ button:active {
   font-family: Poppins, sans-serif;
 }
 
+@media only screen and (max-width: 992px) {
+  .navbar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background: #6070ff;
+    backdrop-filter: blur(3rem);
+    opacity: 0.9;
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  
+  .nav-bar-links {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-items: left;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-left: 18px;
+    width: 100%;
+    margin-top: 120px;
+    list-style-type: none;
+    text-decoration: none;
+  }
+  
+  .navbar a {
+    padding: 8px;
+    text-decoration: none;
+    list-style-type: none;
+    font-size: 36px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .close-btn {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    font-size: 40px;
+    color: white;
+  }
+  
+  .humberger-menu {
+    height: 12px;
+    width: 18px;
+    margin-left: 3px;
+    margin-top: 6px;
+    padding-right: 36px;
+    color: #6070ff;
+  }
+}
+
 /* DESKTOP-VERSION */
 
 @media only screen and (min-width: 992px) {
@@ -595,14 +599,43 @@ button:active {
 
   .header {
     display: flex;
-
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 0;
     margin-left: 0;
     height: 72px;
     width: 100%;
     gap: 32px;
     align-items: center;
+  }
+
+  .navbar {
+    height: 100px;
+    width: fit-content;
+    z-index: 1;
+    background: white;
+    color: black;
+    backdrop-filter: blur(3rem);
+    opacity: 1;
+  }
+  
+  .nav-bar-links {
+    gap: 25px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    align-items: flex-start;
+    justify-content: space-around;
+    padding-left: 0;
+    width: fit-content;
+    font-weight: bold;
+    list-style-type: none;
+    text-decoration: none;
+  }
+
+  .navbar a {
+    color: black;
+    text-decoration: none;
   }
 
   .toggle-nav {
